# FaceSense

./: .gitignore  README.md  Task 5 report.docx  main.cpp  principle-component-analysis-eigenfaces.ipynb  recognition.ipynb
NumCpp/NumCpp-master/NumCpp-master/.github/actions/BuildTestInstall/: action.yml
NumCpp/NumCpp-master/NumCpp-master/.github/actions/LinuxEnvironmentSetup/: action.yml
NumCpp/NumCpp-master/NumCpp-master/develop/NdArray/: NdArrayCore.hpp  NdArrayIterators.hpp
NumCpp/NumCpp-master/NumCpp-master/docs/markdown/: Building.md  ReleaseNotes.md
NumCpp/NumCpp-master/NumCpp-master/examples/InterfaceWithEigen/: InterfaceWithEigen.cpp
NumCpp/NumCpp-master/NumCpp-master/include/: NumCpp.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/: Coordinates.hpp  Core.hpp  DateTime.hpp  NdArray.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/Coordinates/: Coordinate.hpp  Dec.hpp  RA.hpp  degreeSeperation.hpp  radianSeperation.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/Core/: DataCube.hpp  DtypeInfo.hpp  Shape.hpp  Slice.hpp  Timer.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/DateTime/: DateTime.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/Functions/: complex.hpp  deg2rad.hpp  dot.hpp  rad2deg.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/NdArray/: NdArrayBroadcast.hpp  NdArrayCore.hpp  NdArrayIterators.hpp  NdArrayOperators.hpp
NumCpp/NumCpp-master/NumCpp-master/include/NumCpp/Utils/: essentiallyEqual.hpp  essentiallyEqualComplex.hpp  num2str.hpp  power.hpp  sqr.hpp  value2str.hpp
NumCpp/NumCpp-master/NumCpp-master/test/pytest/: test_ndarray_core.py  test_ndarray_iterators.py  test_ndarray_operators.py  test_special.py  test_vector.py
NumCpp/NumCpp-master/NumCpp-master/test/src/: Core.cpp  Functions.cpp  NdArray.cpp  Polynomial.cpp  Random.cpp  Utils.cpp  Vector.cpp
UI/: CMakeLists.txt  detectFaces.cpp  detectFaces.h  logistic.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recognition.cpp
draft/: maha.py  new.ipynb  principle-component-analysis-eigenfaces.ipynb  recognition.ipynb
proccessing/: MyPCA.cpp
proccessing/face_recognition/: CMakeLists.txt  MyPCA.cpp  MyPCA.h  main.cpp  recognition.cpp  recognition.h  test_pca.h
proccessing/face_recognition2/: MyPCA.h
qt/FaceRecognition/: FaceRecognition.pro  garbage.cpp  logistic.cpp  logistic.h  main.cpp  mypca.cpp  mypca.h  notWorkingPCA.cpp  recognition.cpp  recognition.h
qt/build-FaceRecognition-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  pca_results.txt
qt/build-FaceRecognition-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
qt/build-FaceRecognition-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: AlignedBox.h.8E61D73B5AD0C207.idx  AngleAxis.h.998FAEE6A10AECE0.idx  Array.h.6E058EA5A0657222.idx  (+229 more)
qt/build-FaceRecognition-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
roc/: roc.ipynb
(+4 files in other folders)
